--- a/app/src/main/res/layout/friends.xml
+++ b/app/src/main/res/layout/friends.xml
@@ -1,114 +1,154 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/lightPurple"
+    tools:context=".login">
+
+    <LinearLayout
+        app:layout_constraintTop_toTopOf="parent"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".login" android:background="#FFA700">
-    <TextView
-            android:text="Back"
-            android:layout_width="90dp"
-            android:layout_height="32dp" android:id="@+id/textView13"
+        android:layout_height="655dp"
+        android:orientation="vertical">
+
+
+        <LinearLayout
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.202"
-            app:layout_constraintVertical_bias="0.021" android:textSize="25sp" android:textColor="#C93737"/>
-    <ImageButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" app:srcCompat="@drawable/leftarrow" android:id="@+id/imageButton7"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.042"
-            app:layout_constraintVertical_bias="0.022" android:background="#00FFFFFF"/>
-    <TextView
-            android:text="My Friends"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" android:id="@+id/textView8"
-            android:textSize="35sp" app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="@+id/view" app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" app:layout_constraintVertical_bias="0.091"
-            app:layout_constraintHorizontal_bias="0.074"/>
-    <View
             android:layout_width="match_parent"
-            android:layout_height="88dp" android:id="@+id/view"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintVertical_bias="1.0" android:background="#FFFFA1"/>
-    <ImageButton
+            android:layout_height="wrap_content"
+            android:orientation="horizontal" >
+
+            <ImageButton
+                android:id="@+id/add_friend_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="10dp"
+                android:background="@color/lightPurple"
+                app:srcCompat="@drawable/plus" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Social"
+                android:textSize="36sp"
+                android:textColor="@color/black"
+                android:layout_gravity="center"
+                android:layout_marginLeft="90dp"/>
+
+            <ImageButton
+                android:id="@+id/settings_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="100dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
+                android:background="@color/lightPurple"
+                app:srcCompat="@drawable/settings" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal" >
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="74dp"
+                android:orientation="horizontal"
+                android:background="@color/black"
+                android:gravity="center" >
+                <Button
+                    android:id="@+id/feed_tab"
+                    android:layout_width="203dp"
+                    android:layout_height="70dp"
+                    android:text="Feed"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                    android:textAllCaps="false"
+                    android:textSize="36sp"
+                    android:textColor="@color/black"
+                    android:gravity="center"
+                    android:background="@color/lightPurple"
+                    android:layout_marginRight="1dp"/>
+                <Button
+                    android:id="@+id/friends_tab"
+                    android:layout_width="203dp"
+                    android:layout_height="70dp"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                    android:textAllCaps="false"
+                    android:text="Friends"
+                    android:textSize="36sp"
+                    android:textColor="@color/black"
+                    android:gravity="center"
+                    android:background="#673AB7"
+                    android:layout_marginLeft="1dp"/>
+            </LinearLayout>
+
+        </LinearLayout>
+
+        <ListView
+            android:id="@+id/friends_list_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="20dp"
+            android:layout_marginLeft="50dp"
+            android:divider="@android:color/transparent"
+            android:dividerHeight="20dp" >
+        </ListView>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/linearLayout2"
+        android:layout_width="match_parent"
+        android:layout_height="75dp"
+        android:background="#673AB7"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        tools:layout_editor_absoluteX="28dp">
+
+        <ImageButton
+            android:id="@+id/pageHomeBtn"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" app:srcCompat="@drawable/settings" android:id="@+id/friends_settings_button"
-            android:background="#00FFFFFF"
-            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="@+id/view"
-            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintHorizontal_bias="0.955" app:layout_constraintVertical_bias="0.023"/>
-    <SearchView
-            android:layout_width="282dp"
-            android:layout_height="47dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="@+id/view"
-            app:layout_constraintHorizontal_bias="0.124" app:layout_constraintVertical_bias="0.159"
-            android:background="#FFFFA1" android:id="@+id/searchView">
-    </SearchView>
-    <ImageButton
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="#673AB7"
+            app:srcCompat="@drawable/homeorange" />
+
+        <ImageButton
+            android:id="@+id/pageSocialBtn"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" app:srcCompat="@drawable/plus" android:id="@+id/imageButton8"
-            android:background="#00000000"
-            app:layout_constraintBottom_toBottomOf="@+id/view" app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintHorizontal_bias="0.9" app:layout_constraintVertical_bias="0.13999999"
-            android:layout_marginTop="10dp"/>
-    <ImageButton
-            android:layout_width="100dp"
-            android:layout_height="88dp" app:srcCompat="@drawable/notification"
-            android:id="@+id/friend_notification_button"
-            android:background="#00FFFFFF"
-            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintHorizontal_bias="1.0" app:layout_constraintVertical_bias="1.0"/>
-    <ImageButton
-            android:layout_width="104dp"
-            android:layout_height="87dp" app:srcCompat="@drawable/homeorange" android:id="@+id/friend_home_button"
-            android:background="#00FFFFFF"
-            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="0.998"/>
-    <ImageView
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="#673AB7"
+            app:srcCompat="@drawable/socialicon" />
+
+        <ImageButton
+            android:id="@+id/pageExplorBtn"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" app:srcCompat="@drawable/friends" android:id="@+id/imageView7"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="@+id/view" app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.495"
-            app:layout_constraintVertical_bias="0.63"/>
-    <Button
-            android:text="Remove"
-            android:layout_width="154dp"
-            android:layout_height="66dp" android:id="@+id/remove_friend"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintHorizontal_bias="0.661"
-            android:textSize="28sp" android:textAllCaps="false" android:textColor="#C93737"
-            android:background="#FFFFA1" app:layout_constraintBottom_toBottomOf="@+id/view"
-            app:layout_constraintVertical_bias="0.353"/>
-    <ImageButton
-            android:layout_width="100dp"
-            android:layout_height="88dp" app:srcCompat="@drawable/cookbookicon"
-            android:id="@+id/friend_cookbook_button"
-            android:background="#00FFFFFF"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.334"
-            app:layout_constraintVertical_bias="1.0" android:layout_marginLeft="5dp" android:layout_marginStart="5dp"/>
-    <ImageButton
-            android:layout_width="100dp"
-            android:layout_height="88dp" app:srcCompat="@drawable/exploreicon"
-            android:id="@+id/friend_explore_button"
-            android:background="#00FFFFFF"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.678"
-            app:layout_constraintVertical_bias="1.0" android:layout_marginRight="6dp" android:layout_marginEnd="6dp"/>
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="@color/regularPurple"
+            android:clickable="false"
+            app:srcCompat="@drawable/exploreicon" />
+
+        <ImageButton
+            android:id="@+id/pageCBookBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="@color/regularPurple"
+            app:srcCompat="@drawable/cookbookicon" />
+
+        <ImageButton
+            android:id="@+id/pageNotiBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="#673AB7"
+            app:srcCompat="@drawable/notification" />
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
