--- a/app/src/main/res/layout/social.xml
+++ b/app/src/main/res/layout/social.xml
@@ -1,100 +1,145 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".login" android:background="#FFA700">
-    <View
-            android:layout_width="match_parent"
-            android:layout_height="88dp" android:id="@+id/view"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintVertical_bias="1.0" android:background="#FFFFA1"/>
-    <TextView
-            android:text="Social"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" android:id="@+id/textView8"
-            android:textSize="46sp" app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="@+id/view" app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" app:layout_constraintVertical_bias="0.023"
-            android:textColor="#C93737"/>
-    <ImageButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" app:srcCompat="@drawable/settings" android:id="@+id/settings_button"
-            android:background="#00FFFFFF"
-            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="@+id/view"
-            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintHorizontal_bias="0.955" app:layout_constraintVertical_bias="0.023"/>
-    <ImageButton
-            android:layout_width="100dp"
-            android:layout_height="88dp" app:srcCompat="@drawable/notification"
-            android:id="@+id/notif_nav"
-            android:background="#00FFFFFF"
-            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintHorizontal_bias="1.0" app:layout_constraintVertical_bias="1.0"/>
-    <ImageButton
-            android:layout_width="104dp"
-            android:layout_height="87dp" app:srcCompat="@drawable/homeorange" android:id="@+id/home_nav"
-            android:background="#00FFFFFF"
-            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="0.998"/>
-    <ImageButton
-            android:layout_width="100dp"
-            android:layout_height="88dp" app:srcCompat="@drawable/cookbookicon"
-            android:id="@+id/cookbook_nav"
-            android:background="#00FFFFFF"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.334"
-            app:layout_constraintVertical_bias="1.0" android:layout_marginLeft="5dp" android:layout_marginStart="5dp"/>
-    <ImageButton
-            android:layout_width="100dp"
-            android:layout_height="88dp" app:srcCompat="@drawable/exploreicon"
-            android:id="@+id/explore_nav"
-            android:background="#00FFFFFF"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.678"
-            app:layout_constraintVertical_bias="1.0" android:layout_marginRight="6dp" android:layout_marginEnd="6dp"/>
-    <View
-            android:layout_width="209dp"
-            android:layout_height="72dp" android:id="@+id/view2"
-            android:background="#000000"
-            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="0.11"
-            android:layout_marginTop="2dp"/>
-    <TextView
-            android:text="Feed"
-            android:layout_width="205dp"
-            android:layout_height="68dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="@+id/view" app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintVertical_bias="0.116" android:textColor="#C93737" android:textSize="40dp"
-            android:clickable="true" android:gravity="center" android:background="#FFE500"
-            android:id="@+id/textView16" android:layout_marginLeft="1dp" android:layout_marginStart="1dp"
-            android:layout_marginBottom="2dp"/>
-    <TextView
-            android:text="Profile"
-            android:layout_width="203dp"
-            android:layout_height="68dp" android:id="@+id/profile_button"
-            android:background="#FFFFA1" android:textSize="40sp"
-            android:gravity="center" app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="@+id/view" app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintVertical_bias="0.117"/>
-    <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" app:srcCompat="@drawable/feed" android:id="@+id/imageView8"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="@+id/view" app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.495"
-            app:layout_constraintVertical_bias="0.593"/>
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/lightPurple"
+    tools:context=".login">
 
+    <LinearLayout
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_width="match_parent"
+        android:layout_height="655dp"
+        android:orientation="vertical">
+
+
+        <LinearLayout
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal" >
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Social"
+                android:textSize="36sp"
+                android:textColor="@color/black"
+                android:layout_gravity="center"
+                android:layout_marginLeft="150dp"/>
+
+            <ImageButton
+                android:id="@+id/settings_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="100dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
+                android:background="@color/lightPurple"
+                app:srcCompat="@drawable/settings" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal" >
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="74dp"
+                android:orientation="horizontal"
+                android:background="@color/black"
+                android:gravity="center" >
+                <Button
+                    android:id="@+id/feed_tab"
+                    android:layout_width="203dp"
+                    android:layout_height="70dp"
+                    android:text="Feed"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                    android:textAllCaps="false"
+                    android:textSize="36sp"
+                    android:textColor="@color/black"
+                    android:gravity="center"
+                    android:background="#673AB7"
+                    android:layout_marginRight="1dp"/>
+                <Button
+                    android:id="@+id/friends_tab"
+                    android:layout_width="203dp"
+                    android:layout_height="70dp"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                    android:textAllCaps="false"
+                    android:text="Friends"
+                    android:textSize="36sp"
+                    android:textColor="@color/black"
+                    android:gravity="center"
+                    android:background="@color/lightPurple"
+                    android:layout_marginLeft="1dp"/>
+            </LinearLayout>
+
+        </LinearLayout>
+
+        <ListView
+            android:id="@+id/feed_list_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="20dp"
+            android:layout_marginLeft="50dp"
+            android:divider="@android:color/transparent"
+            android:dividerHeight="20dp" >
+        </ListView>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/linearLayout2"
+        android:layout_width="match_parent"
+        android:layout_height="75dp"
+        android:background="#673AB7"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        tools:layout_editor_absoluteX="28dp">
+
+        <ImageButton
+            android:id="@+id/pageHomeBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="#673AB7"
+            app:srcCompat="@drawable/homeorange" />
+
+        <ImageButton
+            android:id="@+id/pageSocialBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="#673AB7"
+            app:srcCompat="@drawable/socialicon" />
+
+        <ImageButton
+            android:id="@+id/pageExplorBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="@color/regularPurple"
+            android:clickable="false"
+            app:srcCompat="@drawable/exploreicon" />
+
+        <ImageButton
+            android:id="@+id/pageCBookBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="@color/regularPurple"
+            app:srcCompat="@drawable/cookbookicon" />
+
+        <ImageButton
+            android:id="@+id/pageNotiBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="#673AB7"
+            app:srcCompat="@drawable/notification" />
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
