--- a/app/src/main/res/layout/filter.xml
+++ b/app/src/main/res/layout/filter.xml
@@ -9,125 +9,128 @@
     <ScrollView
         android:id="@+id/filter_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical" >
+            android:orientation="vertical">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal" >
+                android:orientation="horizontal">
+
                 <ImageButton
                     android:id="@+id/filter_back"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    app:srcCompat="@drawable/leftarrow"
-                    android:background="@color/lightPurple"
                     android:layout_marginLeft="10dp"
-                    android:layout_marginRight="10dp">
-                </ImageButton>
+                    android:layout_marginRight="10dp"
+                    android:background="@color/lightPurple"
+                    app:srcCompat="@drawable/leftarrow"></ImageButton>
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:textColor="@color/black"
                     android:text="Filter Search"
-                    android:textSize="35dp">
-                </TextView>
+                    android:textColor="@color/black"
+                    android:textSize="35dp"></TextView>
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal" >
+                android:orientation="horizontal">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:textColor="@color/black"
-                    android:text="Keywords"
-                    android:textSize="25dp"
                     android:layout_marginLeft="10dp"
+                    android:layout_marginTop="30dp"
                     android:layout_marginRight="10dp"
-                    android:layout_marginTop="30dp">
+                    android:text="Keywords"
+                    android:textColor="@color/black"
+                    android:textSize="25dp">
 
                 </TextView>
+
                 <SearchView
                     android:id="@+id/keywords"
                     android:layout_width="270dp"
                     android:layout_height="45dp"
                     android:layout_marginTop="25dp"
-                    android:background="@color/white">
-                </SearchView>
+                    android:background="@color/white"></SearchView>
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal" >
+                android:orientation="horizontal">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:textColor="@color/black"
-                    android:text="Exclude"
-                    android:textSize="25dp"
                     android:layout_marginLeft="10dp"
+                    android:layout_marginTop="30dp"
                     android:layout_marginRight="32dp"
-                    android:layout_marginTop="30dp">
+                    android:text="Exclude"
+                    android:textColor="@color/black"
+                    android:textSize="25dp">
 
                 </TextView>
+
                 <SearchView
                     android:id="@+id/exclude"
                     android:layout_width="270dp"
                     android:layout_height="45dp"
                     android:layout_marginTop="25dp"
-                    android:background="@color/white">
-                </SearchView>
+                    android:background="@color/white"></SearchView>
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal" >
+                android:orientation="horizontal">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:textColor="@color/black"
-                    android:text="Allergies"
-                    android:textSize="25dp"
                     android:layout_marginLeft="10dp"
+                    android:layout_marginTop="30dp"
                     android:layout_marginRight="23dp"
-                    android:layout_marginTop="30dp">
+                    android:text="Allergies"
+                    android:textColor="@color/black"
+                    android:textSize="25dp">
 
                 </TextView>
+
                 <SearchView
                     android:id="@+id/allergies"
                     android:layout_width="270dp"
                     android:layout_height="45dp"
                     android:layout_marginTop="25dp"
-                    android:background="@color/white">
-                </SearchView>
+                    android:background="@color/white"></SearchView>
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal" >
+                android:orientation="horizontal">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:textColor="@color/black"
-                    android:text="Price"
-                    android:textSize="25dp"
                     android:layout_marginLeft="10dp"
+                    android:layout_marginTop="30dp"
                     android:layout_marginRight="43dp"
-                    android:layout_marginTop="30dp">
+                    android:text="Price"
+                    android:textColor="@color/black"
+                    android:textSize="25dp">
 
                 </TextView>
 
@@ -141,30 +144,31 @@
                     android:paddingLeft="5dp"
                     android:paddingRight="5dp"
                     android:text="0"></EditText>
+
                 <SeekBar
                     android:id="@+id/price_seeker"
                     android:layout_width="250dp"
                     android:layout_height="45dp"
                     android:layout_marginTop="25dp"
-                    android:min="0"
                     android:max="100"
+                    android:min="0"
                     android:progress="0"></SeekBar>
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal" >
+                android:orientation="horizontal">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:textColor="@color/black"
-                    android:text="Calories"
-                    android:textSize="25dp"
                     android:layout_marginLeft="10dp"
+                    android:layout_marginTop="30dp"
                     android:layout_marginRight="10dp"
-                    android:layout_marginTop="30dp">
+                    android:text="Calories"
+                    android:textColor="@color/black"
+                    android:textSize="25dp">
 
                 </TextView>
 
@@ -178,30 +182,31 @@
                     android:paddingLeft="5dp"
                     android:paddingRight="5dp"
                     android:text="0"></EditText>
+
                 <SeekBar
                     android:id="@+id/cal_seeker"
                     android:layout_width="250dp"
                     android:layout_height="45dp"
                     android:layout_marginTop="25dp"
-                    android:min="0"
                     android:max="1000"
+                    android:min="0"
                     android:progress="0"></SeekBar>
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal" >
+                android:orientation="horizontal">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:textColor="@color/black"
-                    android:text="Time"
-                    android:textSize="25dp"
                     android:layout_marginLeft="10dp"
+                    android:layout_marginTop="30dp"
                     android:layout_marginRight="44dp"
-                    android:layout_marginTop="30dp">
+                    android:text="Time"
+                    android:textColor="@color/black"
+                    android:textSize="25dp">
 
                 </TextView>
 
@@ -215,30 +220,31 @@
                     android:paddingLeft="5dp"
                     android:paddingRight="5dp"
                     android:text="0"></EditText>
+
                 <SeekBar
                     android:id="@+id/time_seeker"
                     android:layout_width="250dp"
                     android:layout_height="45dp"
                     android:layout_marginTop="25dp"
-                    android:min="0"
                     android:max="120"
+                    android:min="0"
                     android:progress="0"></SeekBar>
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal" >
+                android:orientation="horizontal">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:textColor="@color/black"
-                    android:text="Servings"
-                    android:textSize="25dp"
                     android:layout_marginLeft="10dp"
+                    android:layout_marginTop="30dp"
                     android:layout_marginRight="44dp"
-                    android:layout_marginTop="30dp">
+                    android:text="Servings"
+                    android:textColor="@color/black"
+                    android:textSize="25dp">
 
                 </TextView>
 
@@ -246,39 +252,37 @@
                     android:id="@+id/servings_box"
                     android:layout_width="60dp"
                     android:layout_height="45sp"
-                    android:background="@color/white"
                     android:layout_marginTop="25dp"
-                    android:text="1"
+                    android:background="@color/white"
                     android:gravity="right"
                     android:paddingLeft="5dp"
                     android:paddingRight="5dp"
+                    android:text="1"
                     android:textSize="30dp"></EditText>
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal" >
+                android:orientation="horizontal">
 
                 <Button
                     android:id="@+id/filter_reset"
-                    android:layout_height="75dp"
                     android:layout_width="150dp"
-                    android:text="Reset"
-                    android:textSize="35dp"
+                    android:layout_height="75dp"
+                    android:layout_marginLeft="25dp"
                     android:layout_marginTop="90dp"
-                    android:layout_marginLeft="25dp">
-                </Button>
+                    android:text="Reset"
+                    android:textSize="35dp"></Button>
 
                 <Button
                     android:id="@+id/filter_save"
-                    android:layout_height="75dp"
                     android:layout_width="150dp"
-                    android:text="Save"
-                    android:textSize="35dp"
+                    android:layout_height="75dp"
+                    android:layout_marginLeft="60dp"
                     android:layout_marginTop="90dp"
-                    android:layout_marginLeft="60dp">
-                </Button>
+                    android:text="Save"
+                    android:textSize="35dp"></Button>
             </LinearLayout>
 
         </LinearLayout>
